# Interactive-ARAP

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  justfile
.devcontainer/: devcontainer.json
data/: cube.off
src/: CMakeLists.txt  arap.cpp  arap.h  gui.cpp  gui.h  main.cpp  tests.cpp  utils.cpp  utils.h
